@@ -1,5 +1,8 @@
 package de.svws_nrw.data.erzieher;
 
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -8,25 +11,22 @@ import java.util.stream.Collectors;
 
 import de.svws_nrw.core.data.SimpleOperationResponse;
 import de.svws_nrw.core.data.erzieher.Erzieherart;
-import de.svws_nrw.core.exceptions.DeveloperNotificationException;
 import de.svws_nrw.data.DataManagerRevised;
 import de.svws_nrw.data.JSONMapper;
 import de.svws_nrw.db.DBEntityManager;
 import de.svws_nrw.db.dto.current.schild.erzieher.DTOErzieherart;
-import de.svws_nrw.db.dto.current.schild.erzieher.DTOSchuelerErzieherAdresse;
 import de.svws_nrw.db.schema.Schema;
 import de.svws_nrw.db.utils.ApiOperationException;
 import jakarta.ws.rs.core.Response;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 
 /**
  * Diese Klasse erweitert den abstrakten {@link DataManagerRevised} für das Core-DTO {@link Erzieherart}.
  */
 public final class DataErzieherarten extends DataManagerRevised<Long, DTOErzieherart, Erzieherart> {
 
-	/**
-	 * patching or deleting these entries is not aloud according to SchILDzentral
-	 */
-	static final Set<Long> IDS_OF_NON_PATCHABLE_ENTRIES = Set.of(1L, 2L, 3L, 4L, 5L);
+	private static final String BEZEICHNUNG = "bezeichnung";
 
 	/**
 	 * Erstellt einen neuen {@link DataManagerRevised} für das Core-DTO {@link Erzieherart}.
@@ -35,8 +35,13 @@ public final class DataErzieherarten extends DataManagerRevised<Long, DTOErziehe
 	 */
 	public DataErzieherarten(final DBEntityManager conn) {
 		super(conn);
-		setAttributesRequiredOnCreation("bezeichnung");
-		setAttributesNotPatchable("id");
+		setAttributesRequiredOnCreation(BEZEICHNUNG);
+		setAttributesNotPatchable("id", BEZEICHNUNG);
+	}
+
+	@Override
+	protected void initDTO(final DTOErzieherart dto, final Long id, final Map<String, Object> initAttributes) {
+		dto.ID = id;
 	}
 
 	@Override
@@ -48,123 +53,110 @@ public final class DataErzieherarten extends DataManagerRevised<Long, DTOErziehe
 	public Erzieherart map(final DTOErzieherart dto) {
 		final Erzieherart daten = new Erzieherart();
 		daten.id = dto.ID;
-		daten.bezeichnung = (dto.Bezeichnung == null) ? "" : dto.Bezeichnung;
-		daten.sortierung = (dto.Sortierung == null) ? 32000 : dto.Sortierung;
-		daten.istSichtbar = (dto.Sichtbar == null) || dto.Sichtbar;
-		daten.exportBez = (dto.ExportBez == null) ? "" : dto.ExportBez;
-		daten.anzahlErziehungsberechtigte = 0;
+		daten.bezeichnung = dto.Bezeichnung;
+		daten.sortierung = Objects.requireNonNullElse(dto.Sortierung, 32000);
+		daten.istSichtbar = Boolean.TRUE.equals(dto.Sichtbar);
 		return daten;
-	}
-
-	/**
-	 * Konvertiert ein DTOErzieherart-Objekt in ein Erzieherart-Objekt und setzt die Anzahl der Erziehungsberechtigte.
-	 *
-	 * @param dto Das DTOErzieherart-Objekt, das konvertiert werden soll.
-	 * @param anzahlErziehungsberechtigte Die Anzahl der Erziehungsberechtigte, die gesetzt werden sollen.
-	 *
-	 * @return Ein Erzieherart-Objekt, das aus dem DTOErzieherart-Objekt konvertiert und mit der Anzahl der Erziehungsberechtigte gesetzt wurde.
-	 */
-	public Erzieherart map(final DTOErzieherart dto, final int anzahlErziehungsberechtigte) {
-		final Erzieherart erzieherart = map(dto);
-		erzieherart.anzahlErziehungsberechtigte = anzahlErziehungsberechtigte;
-		return erzieherart;
-	}
-
-	@Override
-	public List<Erzieherart> getAll() throws ApiOperationException {
-		final List<DTOErzieherart> erzieherarten = conn.queryAll(DTOErzieherart.class);
-		final Map<Long, Long> erzieherartCountById =
-				conn.queryList(DTOSchuelerErzieherAdresse.QUERY_ALL.concat("  WHERE e.ErzieherArt_ID IS NOT NULL"), DTOSchuelerErzieherAdresse.class).stream()
-						.collect(Collectors.groupingBy(t -> t.ErzieherArt_ID, Collectors.counting()));
-		return erzieherarten.stream().map(e -> map(e, erzieherartCountById.getOrDefault(e.ID, 0L).intValue())).toList();
 	}
 
 	@Override
 	public Erzieherart getById(final Long id) throws ApiOperationException {
-		if (id == null)
-			throw new ApiOperationException(Response.Status.BAD_REQUEST, "Eine Anfrage zu einer Erzieherart mit der ID null ist unzulässig.");
-
-		final DTOErzieherart erzieherart = conn.queryByKey(DTOErzieherart.class, id);
-		if (erzieherart == null)
-			throw new ApiOperationException(Response.Status.NOT_FOUND, "Die Erzieherart mit der ID %d wurde nicht gefunden.".formatted(id));
-
-		final int anzahlErziehungsberechtigte =
-				conn.queryList(DTOSchuelerErzieherAdresse.QUERY_BY_ERZIEHERART_ID, DTOSchuelerErzieherAdresse.class, erzieherart.ID).size();
-		return map(erzieherart, anzahlErziehungsberechtigte);
+		if (id == null) {
+			throw new ApiOperationException(Response.Status.BAD_REQUEST, "Die ID für die Erzieherart darf nicht null sein.");
+		}
+		final DTOErzieherart dto = conn.queryByKey(DTOErzieherart.class, id);
+		if (dto == null) {
+			throw new ApiOperationException(Response.Status.NOT_FOUND, "Es wurde keine Erzieherart mit der ID %d gefunden.".formatted(id));
+		}
+		return map(dto);
 	}
 
 	@Override
-	protected void initDTO(final DTOErzieherart dto, final Long id, final Map<String, Object> initAttributes) {
-		dto.ID = id;
-		dto.Bezeichnung = "";
-		dto.Sichtbar = true;
-		dto.Sortierung = 32000;
-	}
+	public List<Erzieherart> getAll() {
+		final List<DTOErzieherart> erzieherarten = this.conn.queryAll(DTOErzieherart.class);
+		final Set<Long> idsOfReferencedErzieherarten = this.getIdsOfReferencedErzieherarten(mapToIds(erzieherarten));
 
-	@Override
-	public void checkBeforePatch(final DTOErzieherart dto, final Map<String, Object> patchAttributes) throws ApiOperationException {
-		if (IDS_OF_NON_PATCHABLE_ENTRIES.contains(dto.ID))
-			throw new ApiOperationException(Response.Status.BAD_REQUEST, "Der Eintrag %s mit der id %d darf nicht verändert werden.".formatted(dto.Bezeichnung, dto.ID));
+		return erzieherarten
+				.stream()
+				.map(this::map)
+				.map(f -> setReferenceFlag(f, idsOfReferencedErzieherarten))
+				.sorted(Comparator.comparing(f -> f.id))
+				.toList();
 	}
 
 	@Override
 	protected void mapAttribute(final DTOErzieherart dto, final String name, final Object value, final Map<String, Object> map) throws ApiOperationException {
 		switch (name) {
-			case "id" -> {
-				final Long id = JSONMapper.convertToLong(value, false, name);
-				if (!Objects.equals(dto.ID, id))
-					throw new ApiOperationException(Response.Status.BAD_REQUEST,
-							"Die ID %d des Patches ist null oder stimmt nicht mit der ID %d in der Datenbank überein.".formatted(id, dto.ID));
-			}
-			case "bezeichnung" -> validateBezeichnung(dto, value, name);
+			case "id" -> validateId(dto, name, value);
+			case BEZEICHNUNG -> validateBezeichnung(dto, value, name);
 			case "istSichtbar" -> dto.Sichtbar = JSONMapper.convertToBoolean(value, false, name);
 			case "sortierung" -> dto.Sortierung = JSONMapper.convertToInteger(value, false, name);
-			case "exportBez" -> dto.ExportBez = JSONMapper.convertToString(value, false, false, Schema.tab_K_ErzieherArt.col_ExportBez.datenlaenge(), name);
 			default -> throw new ApiOperationException(Response.Status.BAD_REQUEST, "Die Daten des Patches enthalten das unbekannte Attribut %s.".formatted(name));
-
 		}
+	}
+
+	private static void validateId(final DTOErzieherart dto, final String name, final Object value) throws ApiOperationException {
+		final Long id = JSONMapper.convertToLong(value, false, name);
+		if (!Objects.equals(dto.ID, id))
+			throw new ApiOperationException(Response.Status.BAD_REQUEST,
+					"Die ID %d des Patches ist null oder stimmt nicht mit der ID %d in der Datenbank überein.".formatted(id, dto.ID));
 	}
 
 	private void validateBezeichnung(final DTOErzieherart dto, final Object value, final String name) throws ApiOperationException {
-		final String bezeichnung = JSONMapper.convertToString(
-				value, false, false, Schema.tab_K_ErzieherArt.col_Bezeichnung.datenlaenge(), name);
-		if (Objects.equals(dto.Bezeichnung, bezeichnung) || bezeichnung.isBlank())
-			return;
-
-		final boolean bezeichnungAlreadyUsed = this.conn.queryAll(DTOErzieherart.class).stream()
-				.anyMatch(e -> (e.ID != dto.ID) && bezeichnung.equalsIgnoreCase(e.Bezeichnung));
-
-		if (bezeichnungAlreadyUsed)
-			throw new ApiOperationException(Response.Status.BAD_REQUEST, "Die Bezeichnung %s ist bereits vorhanden.".formatted(bezeichnung));
-
-		dto.Bezeichnung =  bezeichnung;
+		final String bezeichnung = JSONMapper.convertToString(value, false, false, Schema.tab_K_ErzieherArt.col_Bezeichnung.datenlaenge(), name);
+		if (StringUtils.isBlank(bezeichnung)) {
+			throw new ApiOperationException(Response.Status.BAD_REQUEST, "Attribut bezeichnung: Ein leerer String ist nicht erlaubt.");
+		}
+		validateBezeichnungIsUnique(bezeichnung);
+		dto.Bezeichnung = bezeichnung;
 	}
 
+	private void validateBezeichnungIsUnique(final String bezeichnung) throws ApiOperationException {
+		final boolean bezeichnungAlreadyUsed = this.conn
+				.queryAll(DTOErzieherart.class)
+				.stream()
+				.anyMatch(e -> Strings.CI.equals(bezeichnung, e.Bezeichnung));
+		if (bezeichnungAlreadyUsed) {
+			throw new ApiOperationException(Response.Status.BAD_REQUEST, "Die Bezeichnung %s ist bereits vorhanden.".formatted(bezeichnung));
+		}
+	}
 
 	@Override
-	protected void checkBeforeDeletionWithSimpleOperationResponse(final List<DTOErzieherart> dtos, final Map<Long, SimpleOperationResponse> mapResponses) {
-		final List<Long> ids = dtos.stream().map(d -> d.ID).toList();
-		final Map<Long, Long> erziehungsberechtigteCountById = conn.queryList(
-						"SELECT e.ErzieherArt_ID, COUNT(e) FROM DTOSchuelerErzieherAdresse e "
-								+ "WHERE e.ErzieherArt_ID IN ?1 GROUP BY e.ErzieherArt_ID", Object[].class, ids).stream()
-				.collect(Collectors.toMap(id -> (Long) id[0], count -> (Long) count[1]));
-		for (final DTOErzieherart dto : dtos) {
-			final SimpleOperationResponse response = mapResponses.getOrDefault(dto.ID, null);
-			if (response == null)
-				throw new DeveloperNotificationException("Das SimpleOperationResponse Objekt zu der ID %d existiert nicht.".formatted(dto.ID));
+	protected void checkBeforeDeletionWithSimpleOperationResponse(final List<DTOErzieherart> erzieherarten, final Map<Long, SimpleOperationResponse> responses) {
+		erzieherarten
+				.stream()
+				.filter(e -> Boolean.FALSE.equals(e.Aenderbar))
+				.forEach(e -> markResponseAsFailed(responses.get(e.ID), e.ID));
+	}
 
-			if (IDS_OF_NON_PATCHABLE_ENTRIES.contains(dto.ID)) {
-				response.success = false;
-				response.log.add("Erzieherart %s (ID: %d) darf weder gelöscht noch verändert werden".formatted(dto.Bezeichnung, dto.ID));
-				continue;
-			}
+	private static void markResponseAsFailed(final SimpleOperationResponse response, final Long id) {
+		response.success = false;
+		response.log.add(("Die Erzieherart mit der id %d darf aufgrund der Volljährigkeitsberechnung in SchildZentral nicht gelöscht werden.").formatted(id));
+	}
 
-			final long count = erziehungsberechtigteCountById.getOrDefault(dto.ID, 0L);
-			if (count > 0) {
-				response.success = false;
-				response.log.add("Erzieherart %s (ID: %d) hat noch %d verknüpfte SchülerErziehereinträge.".formatted(dto.Bezeichnung, dto.ID, count));
-			}
+	private Set<Long> getIdsOfReferencedErzieherarten(final Set<Long> ids) {
+		if ((ids == null) || ids.isEmpty()) {
+			return Collections.emptySet();
 		}
+
+		final String query = "SELECT DISTINCT a.ErzieherArt_ID FROM DTOSchuelerErzieherAdresse a WHERE a.ErzieherArt_ID IN :ids";
+		final List<Long> results = this.conn
+				.query(query, Long.class)
+				.setParameter("ids", ids)
+				.getResultList();
+		return new HashSet<>(results);
+	}
+
+	private static Set<Long> mapToIds(final List<DTOErzieherart> erzieherarten) {
+		return erzieherarten
+				.stream()
+				.map(f -> f.ID)
+				.collect(Collectors.toSet());
+	}
+
+	private static Erzieherart setReferenceFlag(final Erzieherart erzieherart, final Set<Long> idsOfReferencedErzieherarten) {
+		erzieherart.referenziertInAnderenTabellen = idsOfReferencedErzieherarten.contains(erzieherart.id);
+		return erzieherart;
 	}
 
 }
